# dingkwang-site

./: .gitignore  FLY_DEPLOY.md  README.md  deploy-fly.sh  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  fly.toml  pyproject.toml
backend/app/: config.py  main.py
backend/app/agent/: client.py  system_prompt.py  tools.py
backend/app/middleware/: rate_limit.py
backend/app/routers/: chat.py
backend/data/: resume.md
frontend/: Dockerfile  fly.toml  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/components/: ChatBot.tsx  ChatInput.tsx  ChatMessage.tsx  Hero.tsx  Navbar.tsx  Projects.tsx  TechStack.tsx
